# IxeRam

./: CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
include/: Config.hpp  MainWindow.hpp  MemoryEngine.hpp  ProcessSelectorDialog.hpp  Scanner.hpp  SetupWizard.hpp  TUI.hpp
src/: Config.cpp  MemoryEngine.cpp  SetupWizard.cpp  TUI.cpp  TUI_run.cpp  main.cpp  speedhack.c
src/gui/: MainWindow.cpp  ProcessSelectorDialog.cpp
test/: main  main.c
